# shapeflow

./: .gitignore  Cargo.toml  Dockerfile.cloudrun  Justfile  LICENSE  README.md  SECURITY.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: rollout.yml
configs/: bootstrap.toml  paper_example.toml
crates/shapeflow-cli/: Cargo.toml
crates/shapeflow-cli/src/: export_split.rs  generate.rs  generated_config_metadata.rs  human_eval.rs  inspect_scene.rs  main.rs  materialization_metadata.rs  preview.rs  site_graph_artifact.rs  site_metadata.rs  site_stats.rs  split_assignments_metadata.rs  targets.rs  tests.rs  validate.rs
crates/shapeflow-core/: Cargo.toml
crates/shapeflow-core/proofs/: latent_state.rs  scene_generation.rs  seed_config_landscape.rs  site_graph.rs  sound_validation.rs  split_assignments.rs  tabular_encoding.rs  target_generation.rs  text_encoding.rs  text_semantics.lean  text_typo_selection.rs  trajectory.rs
crates/shapeflow-core/src/: artifact_serialization.rs  config.rs  image_encoding.rs  landscape.rs  landscape_validation.rs  latent_state.rs  lib.rs  scene_generation.rs  seed_schedule.rs  site_graph.rs  sound_encoding.rs  sound_validation.rs  split_assignments.rs  tabular_encoding.rs  target_generation.rs  text_encoding.rs  text_semantics.rs  trajectory.rs  video_encoding.rs
crates/shapeflow-human-eval/: Cargo.toml  DETERMINISM_AUDIT.md
crates/shapeflow-human-eval/migrations/postgres/: 0001_init_human_eval_sessions.sql  0002_add_usage_columns_and_indexes.sql  0003_create_mcp_http_sessions.sql  0004_add_skipped_questions.sql
crates/shapeflow-human-eval/migrations/sqlite/: 0001_init_human_eval_sessions.sql  0002_add_usage_columns_and_indexes.sql  0003_create_mcp_http_sessions.sql  0004_add_skipped_questions.sql
crates/shapeflow-human-eval/src/: db.rs  flow.rs  lib.rs  mcp.rs  mcp_session.rs  server.rs  stimulus.rs  views.rs
crates/shapeflow-human-eval/static/: app.js  style.css
crates/shapeflow-py/: Cargo.toml
crates/shapeflow-py/python/shapeflow/: __init__.pyi
crates/shapeflow-py/src/: lib.rs
