[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "shapeflow"
version = "0.1.0"
description = "Deterministic multimodal dataset generator bindings for ShapeFlow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ShapeFlow contributors" }]

[tool.maturin]
manifest-path = "crates/shapeflow-py/Cargo.toml"
module-name = "shapeflow"
bindings = "pyo3"
python-source = "crates/shapeflow-py/python"
