[package]
name = "shapeflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shapeflow"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
rayon.workspace = true
toml.workspace = true
shapeflow-core = { path = "../shapeflow-core" }
