[package]
name = "shapeflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ciborium.workspace = true
hound.workspace = true
hex.workspace = true
libm.workspace = true
image.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
toml.workspace = true
