[package]
name = "shapeflow-human-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
hound.workspace = true
gif.workspace = true
image.workspace = true
maud.workspace = true
maud-extensions.workspace = true
serde.workspace = true
rand.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
shapeflow-core = { path = "../shapeflow-core" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
